[tool.poetry]
name = "pyfian"
version = "0.1.0"
description = "Package for Python Financial Analyst"
authors = ["Pablo Orazi <pabloorazi@gmail.com>", "Pante #INCLUIR AQUÃ TU NOMBRE Y CORREO>"]
readme = "README.md"
packages = [{include = "pyfian_dev"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

