[tool.poetry]
name = "pyfian"
version = "0.1.0"
description = "Package for Python Financial Analyst"
authors = [
    "Pablo Orazi <pabloorazi@gmail.com>", "Panteleymon Semka <pante0321@gmail.com>"
]

readme = "README.md"
packages = [{include = "pyfian", from = "src"}]

# Add project URLs
homepage = "https://python-financial-analyst.github.io/pyfian_dev/index.html"
repository = "https://github.com/Python-Financial-Analyst/pyfian_dev"
documentation = "https://python-financial-analyst.github.io/pyfian_dev/index.html"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.1"
pandas = "^2.3.0"
numpy-financial = "^1.0.0"
matplotlib = "^3.10.3"
scipy = "^1.16.0"
types-python-dateutil = "^2.9.0.20250708"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ipykernel = "^6.29.5"
nbconvert = "^7.16.6"
ruff = "^0.12.3"
pytest-cov = "^6.2.1"
jupyter = "^1.1.1"
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"
myst-parser = "^4.0.1"
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
pre-commit = "^4.2.0"
bumpver = "^2025.1131"
types-python-dateutil = "^2.9.0.20250708"


[tool.flake8]
max-line-length = 90

[tool.pytest.ini_options]
addopts = "--durations=10"